--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,9 @@
         "slim/slim": "^4.11",
         "slim/http": "^1.3",
         "slim/psr7": "^1.6",
-        "php": "^8.2"
+        "php": "^8.2",
+        "stevenmaguire/oauth2-keycloak": "^4.0",
+        "php-di/slim-bridge": "^3.3"
     },
     "license": "MIT",
     "autoload": {
