--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,6 +36,8 @@ services:
     container_name: app-php
     image: phpdockerio/php:8.2-fpm
     working_dir: /application
+    environment:
+      - VAR=${VAR:-default}
     volumes:
       - '.:/application'
       - './php-ini-overrides.ini:/etc/php/8.2/fpm/conf.d/99-overrides.ini'
