--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,8 @@ services:
       MYSQL_PASSWORD: password
     volumes:
       - mysql_data:/var/lib/mysql
+    networks:
+      - keycloak-poc
   keycloak:
     container_name: keycloak
     image: quay.io/keycloak/keycloak:21.0.2
@@ -32,23 +34,47 @@ services:
     command: start-dev
     depends_on:
       - db
+    networks:
+      - keycloak-poc
   php-fpm:
     container_name: app-php
-    image: phpdockerio/php:8.2-fpm
+    build: .
     working_dir: /application
     environment:
       - VAR=${VAR:-default}
+      - AUTH_SERVER_URL=${AUTH_SERVER_URL}
+      - REALM=${REALM}
+      - CLIENT_ID=${CLIENT_ID}
+      - CLIENT_SECRET=${CLIENT_SECRET}
+      - REDIRECT_URI=${REDIRECT_URI}
+      - PHP_IDE_CONFIG=${PHP_IDE_CONFIG?}
     volumes:
       - '.:/application'
       - './php-ini-overrides.ini:/etc/php/8.2/fpm/conf.d/99-overrides.ini'
+      - './90-xdebug.ini:/etc/php/8.2/fpm/conf.d/90-xdebug.ini'
+      - './90-xdebug.ini:/etc/php/8.2/cli/conf.d/90-xdebug.ini'
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
+    networks:
+      - keycloak-poc
   webserver:
     image: 'nginx:alpine'
     working_dir: /application
     volumes:
       - '.:/application'
       - './nginx.conf:/etc/nginx/conf.d/default.conf'
+    environment:
+      - PHP_IDE_CONFIG=${PHP_IDE_CONFIG?}
     ports:
       - '11000:80'
     depends_on:
       - php-fpm
       - keycloak
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
+    networks:
+      - keycloak-poc
+
+networks:
+  keycloak-poc:
+    external: true
